<resources>
    <string name="app_name" translatable="false">Labs20231-Gr02</string>
    <string name="personal_info">Personal Information</string>
    <string name="name_hint">Name*</string>
    <string name="last_name_hint">Last Name*</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Women</string>
    <string name="date">Date of Birth</string>
    <string name="change_date">Change</string>
    <string name="placeholder">Placeholder</string>
    <string name="date_info">Info*</string>
    <string name="scholarly_level">School grade</string>
    <string name="next">Next</string>
    <string name="required">*required</string>
    <string name="email_hint">Email*</string>
    <string name="email">Email</string>
    <string name="phone_hint">Phone*</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="country_hint">Country*</string>
    <string name="save">Save</string>
    <string name="form_submitted">Form Submitted</string>
    <string name="okay">Okay</string>
    <string name="invalid_form">Invalid Form</string>
    <string name="contact_information">Contact information</string>
    <string name="must_be_a_number">Must be all Digits</string>
    <string name="must_be_between_4_and_12_digits">Must be between 4 and 12 digits</string>
    <string name="must_be_a_valid_email">Must be a valid email</string>
    <string name="birth_date">Birth date</string>
    <string name="birthday_hint">Birthday*</string>
    <string name="select_date">Select date</string>
    <string name="invalid_date">Invalid date</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string-array name="school_grade">
        <item>Primary</item>
        <item>Secondary</item>
        <item>University study</item>
        <item>Other</item>
    </string-array>
</resources>