<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PersonalDataActivity"
    tools:layout_editor_absoluteY="89dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_hint"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords|textNoSuggestions"
            android:lines="1"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameContainer"
        android:layout_width="270dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords|textNoSuggestions"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="onRadioButtonClicked"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameContainer">

        <TextView
            android:id="@+id/genderText"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <RadioButton
            android:id="@+id/radioButtonM"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioButtonW"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/listaBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayContainer">

        <AutoCompleteTextView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/scholarly_level" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/namePic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/placeholder"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/nameContainer"
        app:srcCompat="@drawable/baseline_person_24"
        app:tint="@color/md_theme_light_outline" />

    <ImageView
        android:id="@+id/lastNPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/placeholder"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/lastNameContainer"
        app:srcCompat="@drawable/baseline_person_add_alt_1_24"
        app:tint="@color/md_theme_light_outline" />

    <ImageView
        android:id="@+id/genderPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/placeholder"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:srcCompat="@drawable/baseline_people_24"
        app:tint="@color/md_theme_light_outline" />

    <ImageView
        android:id="@+id/calendarPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/placeholder"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/birthdayContainer"
        app:srcCompat="@drawable/baseline_calendar_month_24"
        app:tint="@color/md_theme_light_outline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayContainer"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/outline_calendar_today_24"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorAccent"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:hint="@string/birthday_hint"
            android:inputType="none"
            android:lines="1"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/capPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/placeholder"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/listaBox"
        app:srcCompat="@drawable/baseline_school_24"
        app:tint="@color/md_theme_light_outline" />


    <Button
        android:id="@+id/NextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="sendMessage"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>